# lefts

./: .gitignore  EarlyStopping.ipynb  Examples.ipynb  ExamplesWithInterface.ipynb  LICENSE  README.md  categorical_pomap.py  clean_pomap_example.ipynb  cleaner_demo.ipynb  cross_validation_pomap.py  demo.ipynb  example_model.ipynb  mkdocs.yml  pomap.py  pomap_old.py  pomap_rewrite.py  proto_pomap_v2.ipynb  pure_visitor_rewrite.ipynb  pyproject.toml  requirements.txt  setup.py  tester.ipynb  todos.py
core/: interface.py  interpreter.py  label.py  nodes.py  pomap.py  pure_visitor_rewrite.ipynb  tree_rewrite.ipynb  visitor_rewrite.ipynb
core_old/: label.py  pomap.py  pure_visitor_rewrite.ipynb  tree_rewrite.ipynb
demos/: demo.ipynb  example_model.ipynb
docs/: understanding-lefts.md
docs/api/: commands.md  helpers.md  model.md
docs/commands/: ensemble.md  feed.md  index.md  leaf.md  lift.md  split.md  tune.md
notebooks/: EarlyStopping.ipynb  ExamplesWithInterface.ipynb  NiksTestNotebook.ipynb  lgbm_rolling_retrain_early_stopping.ipynb  quantile_ensemble.ipynb  teacher_student.ipynb
pomap_v1/: categorical_pomap.py  clean_pomap_example.ipynb  pomap.py
pomap_v2/: categorical_pomap.py  cross_validation_pomap.py  pomap.py  pomap_v2_proto.ipynb
pomaps/: categorical_pomap.py  cross_validation_pomap.py
src/core/: interface.py  label.py
src/lefts/: __init__.py  helpers.py  interface.py  nodes.py  validation.py
src/lefts/interpreter/: fit.py  labels.py  masks.py  params.py  predict.py
src/pomap/: interface.py  interpreter.py  nodes.py  validation.py
src/pomap/interpreter/: fit.py  predict.py
tests/: conftest.py  test_feed.py  test_fit.py  test_fit_observability.py  test_interpreter.py  test_labels.py  test_mark_rows.py  test_masks.py  test_nodes.py  test_predict.py  test_split.py  test_validation.py
