[project]
name = "pomap"
version = "0.1.0"
description = "Composable transformations for model experimentation"
authors = [
    { name = "Niklas Mather", email = "niksmather@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars",
]

[tool.ruff.lint]
ignore = ["E731"] # Allows the use of lambdas as variables

[dependency-groups]
dev  = [
    "pytest",
    "ruff",
    "ipykernel",
    "jupyter",
    "jupyterlab",
    "nbstripout"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
