[project]
name = "lefts"
license = "Apache-2.0"
version = "0.1.0"
description = "Composable transformations for model experimentation"
readme = "README.md"
authors = [
    { name = "Niklas Mather", email = "niksmather@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "polars",
]

[project.urls]
Homepage = "https://github.com/nsmat/lefts"
Repository = "https://github.com/nsmat/lefts"

[tool.ruff.lint]
ignore = ["E731"] # Allows the use of lambdas as variables

[dependency-groups]
dev  = [
    "pytest",
    "ruff",
    "ipykernel",
    "jupyter",
    "jupyterlab",
    "nbstripout",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
